Add Google Sheets logging

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ ALERT_EMAIL=your_alert_email@example.com
 GOOGLE_SERVICE_ACCOUNT_FILE=service_account.json
 # ID of the folder where invoices should be uploaded
 GOOGLE_DRIVE_FOLDER_ID=your_folder_id
+# ID of the Google Sheet for logging (optional)
+GOOGLE_SHEET_ID=your_sheet_id
 
 # Notion Configuration
 NOTION_TOKEN=your_integration_token
